# Croissant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  hack.txt  xmake.lua
Documents/: CROISSANT SFD0001 système évènementiel.docx
Documents/Modélisation/: EventModel.vsdx
Sources/BuildConfiguration/: CroissantStyleForEclipse.xml  configure.rb  env.mk  main.mk  mkdir.rb  rm.rb  rule.rb
Sources/Dblock/: Tutorial02.fx
Sources/Dblock/Ressources/Shaders/: main.frag  main.vert
Sources/Dblock/Source/: test.cpp
Sources/Engine/Include/: Common.hpp  Define.hpp  Engine.hpp  stdafx.hpp  targetver.hpp
Sources/Engine/Include/Core/: Application.hpp  CommandLine.hpp  CommandLineBoolElement.hpp  CommandLineElement.hpp  DebugMemoryManager.hpp  Delegate.hpp  Frame.hpp  IFrameProvider.hpp  ILoggerOutput.hpp  Logger.hpp  LoggerOutputToFile.hpp  NonCopyable.hpp  Object.hpp  Pimpl.hpp  Rand.hpp  SmartPointer.hpp  StopWatchPerformanceCounter.hpp  StopWatchTime.hpp  String.hpp  StringConversion.hpp  Type.hpp
Sources/Engine/Include/Event/: Event.hpp  EventManager.hpp  EventManagerImplementor.hpp  FrameEndEvent.hpp  FrameStartEvent.hpp  IEventListener.hpp  IEventManagerImplementor.hpp  ProcessUserInputEvent.hpp  RenderEvent.hpp  UserEvent.hpp
Sources/Engine/Include/Exception/: CroissantException.hpp  NotImplementedException.hpp
Sources/Engine/Include/FileSystem/: Directory.hpp  File.hpp  OFStream.hpp
Sources/Engine/Include/Math/: Matrix.hpp  Point.hpp  Vector.hpp
Sources/Engine/Include/Module/: IModule.hpp  ModuleLoadedEvent.hpp  ModuleLoadingEvent.hpp  ModuleManager.hpp  ServiceProvider.hpp
Sources/Engine/Include/Scene/: Geometry.hpp  Node.hpp  SceneElement.hpp  SceneManager.hpp  Spatial.hpp
Sources/Engine/Include/Tpl/: TypeTraits.hpp
Sources/Engine/Source/: Engine.cpp  dllmain.cpp  stdafx.cpp
Sources/Engine/Source/Core/: Application.cpp  CommandLine.cpp  CommandLineBoolElement.cpp  CommandLineElement.cpp  DebugMemoryManager.cpp  Frame.cpp  IFrameProvider.cpp  Logger.cpp  LoggerOutputToFile.cpp  Object.cpp  Rand.cpp  StopWatchPerformanceCounter.cpp  StopWatchTime.cpp  String.cpp  Type.cpp
Sources/Engine/Source/Event/: Event.cpp  EventManager.cpp  EventManagerImplementor.cpp  FrameEndEvent.cpp  FrameStartEvent.cpp  IEventManagerImplementor.cpp  ProcessUserInputEvent.cpp  RenderEvent.cpp  UserEvent.cpp
Sources/Engine/Source/Exception/: CroissantException.cpp  (+1 more)
Sources/Engine2/: CMakeLists.txt  CMakeLists.txt.old  cmake_command.txt
Sources/Engine2/Include/: Engine.hpp
Sources/Engine2/Include/Core/: AbstractBuffer.hpp  Application.hpp  Application.inl  BufferAccessor.hpp  BufferAccessor.inl  Enums.hpp  IndexBuffer.hpp  LogManager.hpp  Mesh.hpp  Node.hpp  VertexBuffer.hpp  VertexBufferDescriptor.hpp  VertexBufferDescriptor.inl
Sources/Engine2/Include/Debug/: MemoryManager.hpp
Sources/Engine2/Include/Exception/: CroissantException.hpp
Sources/Engine2/Include/FileSystem/: Directory.hpp  File.hpp
Sources/Engine2/Include/Graphic/: Camera.hpp  Enums.hpp  OpenGLBuffer.hpp  OpenGLRenderer.hpp  OpenGLShaderLoader.hpp  OpenGLSystemInfo.hpp  OpenGLWrapper.hpp  VulkanRenderer.hpp  Window.hpp  WindowEvent.hpp  WindowEventClose.hpp  WindowEventKey.hpp  WindowEventNone.hpp  WindowEventType.hpp  WindowMouseMoveEvent.hpp
Sources/Engine2/Include/Math/: EulerAngle.hpp  Math.hpp  Math.inl  Matrix.hpp  Matrix4.hpp  Point.hpp  Point2.hpp  Point4.hpp  Quaternion.hpp  Tuple.hpp  Vector4.hpp
Sources/Engine2/Include/Module/: ServiceProvider.hpp  ServiceProviderInternal.hpp
Sources/Engine2/Include/Threading/: AutoResetEvent.hpp  Thread.hpp
Sources/Engine2/Source/Core/: Application.cpp  IndexBuffer.cpp  LogManager.cpp  Mesh.cpp  Node.cpp  VertexBuffer.cpp
Sources/Engine2/Source/Debug/: MemoryManager.cpp
Sources/Engine2/Source/Exception/: CroissantException.cpp
Sources/Engine2/Source/FileSystem/: Directory.cpp  File.cpp
Sources/Engine2/Source/Graphic/: Camera.cpp  OpenGLBuffer.cpp  OpenGLRenderer.cpp  OpenGLShaderLoader.cpp  OpenGLSystemInfo.cpp  OpenGLWrapper.cpp  VulkanRenderer.cpp  Window.cpp  WindowEvent.cpp  WindowEventClose.cpp  WindowEventKey.cpp  WindowEventNone.cpp  WindowInternal.Linux.cpp  WindowInternal.Windows.inl  WindowMouseMoveEvent.cpp
Sources/Engine2/Source/Math/: EulerAngle.cpp  Matrix4.cpp  Point2.cpp  Point4.cpp  Quaternion.cpp  Vector4.cpp
Sources/Engine2/Source/Module/: ServiceProvider.cpp  ServiceProviderInternal.cpp
Sources/Engine2/Source/Specific/FileSystem/: Directory.uni.cpp  Directory.win.cpp  File.uni.cpp  File.win.cpp
Sources/Engine2/Source/Specific/Threading/: AutoResetEvent.std.cpp  AutoResetEvent.win.cpp  Thread.std.cpp  Thread.win.cpp
Sources/Engine2/Source/Threading/: AutoResetEvent.cpp  Thread.cpp
Sources/GetConfig/: CMakeLists.txt
Sources/GetConfig/Source/: Main.cpp
Sources/ModuleOpenGLWindows/Include/: ModuleOpenGLWindows.hpp
Sources/ModuleOpenGLWindows/Source/: main.cpp
Sources/UnitTestGTest/: CMakeLists.txt  CMakeLists.txt.old
Sources/UnitTestGTest/Source/: main.cpp
Sources/UnitTestGTest/Source/Core/: String.cpp
Sources/UnitTestGTest/Source/Event/: EventManager.cpp
Sources/UnitTestGTest/Source/FileSystem/: Directory.cpp  File.cpp
Sources/UnitTestGTest/Source/Math/: Matrix4.cpp  Point.cpp  Quaternion.cpp  Vector4.cpp
python/: create_header.py
vulkan/: CMakeLists.txt  README.txt  conanfile.txt  main.cpp
vulkan/Include/: VulkanTestApp.hpp
vulkan/Include/Graphic/Vulkan/: Utils.hpp  VulkanRenderer.hpp
vulkan/Include/Graphic/Vulkan/Wrapper/: GraphicsPipeline.hpp  ImageView.hpp  ImageView.inl  Instance.hpp  Instance.inl  LogicalDevice.hpp  LogicalDevice.inl  PhysicalDevice.hpp  PhysicalDevice.inl  RenderPass.hpp  ShaderModule.hpp  Surface.hpp  Surface.inl  SwapChain.hpp  SwapChain.inl
vulkan/Source/: VulkanTestApp.cpp
vulkan/Source/Graphic/Vulkan/: VulkanRenderer.cpp
vulkan/Source/Graphic/Vulkan/Wrapper/: GraphicsPipeline.cpp  ImageView.cpp  Instance.cpp  LogicalDevice.cpp  RenderPass.cpp  ShaderModule.cpp  Surface.cpp  SwapChain.cpp
vulkan/shaders/: shader.vert
(+142 files in other folders)
